# GitHook-Arqmeds

./: README.md
hook/: .env-example  README.md  formatter.py  pyproject.toml  requeriments.txt  requester.py  runner.py
hook/cli/: cli.py
