[tool.poetry]
name = "arkhook"
version = "0.1.0"
description = ""
authors = ["kaiqueBellmont <kaiquebellmont@gmail.com>"]
readme = "README.md"

packages = [
    { include = "scripts"},
    { include = "cli"},

]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
